--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <!--end header title-->
-
+            <ng-include src="'partials/adminDash.html'" ng-if="isadmin"></ng-include>
             
 
            
@@ -35,7 +35,7 @@
             <!--footer-->
             <div class="footer">
                 <div>
-                     &copy;2015 &middot; <b>flexwork.io</b> &middot; <a href="privacy-terms-fxw.html">Privacy and Terms</a> &middot; <a href="imprint-fxw.html">Imprint</a>
+                     &copy;2016 &middot; <b>flexwork.io</b> &middot; <a href="privacy-terms-fxw.html">Privacy and Terms</a> &middot; <a href="imprint-fxw.html">Imprint</a>
                 </div>
             </div>
             <!--end footer-->
