--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -252,9 +252,10 @@
                                                             <span class="label label-default label-nobg"><img src="img/ellipsis.gif" width="15" height="15"> in QA</span>
                                                         </td>
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Accept.status">
-                                                            <button type="button" class="btn btn-primary btn-xs fxw-alert-accept-ticket" ng-click="acceptTicket(ticket)"><i class="fa fa-chevron-right" ></i> acccept</button>
+                                                            <button type="button" class="btn btn-primary btn-xs fxw-alert-accept-ticket" ng-click="acceptTicket(ticket)" ng-if="!ticket.bugopen"><i class="fa fa-chevron-right" ></i> acccept</button>
                                                             <button type="button" class="btn btn-danger btn-xs fxw-alert-reject-ticket" ng-click="openAddBug(ticket)"><i class="fa fa-undo"></i> add bug</button>
-                                                            <small>please accept &amp; close ticket</small>
+                                                            <small ng-if="!ticket.bugopen">please accept &amp; close ticket</small>
+                                                            <small ng-if="ticket.bugopen">bugs solving in progress</small>
                                                         </td>
                                                          <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status && isKeyAccount">
                                                             <span class="label label-default label-nobg" ng-if="ticket.open"><i class="fa fa-check"></i> done / not billed</span>
@@ -1039,7 +1040,7 @@
                                 <input type="text" class="form-control" placeholder="Bug Title" ng-model="storytitle">
                             </div>
                             <div class="form-group m0">
-                                 <textarea class="form-control textarea-keybox" placeholder="Description" ng-model="storydescription"></textarea>
+                                 <div text-angular  ta-toolbar="[['h3','p','bold','ul','ol','insertLink','undo']]" ng-model="storydescription"></div>
                             </div>
                             
                         </div>
