--- a/app/partials/cuser.html
+++ b/app/partials/cuser.html
@@ -443,7 +443,7 @@
                         <div class="col-md-6" >
                             <div class="input-group">
                                 <div class="checkbox checkbox-primary mt-5 mb-5">
-                                    <input type="checkbox" id="checkbox3" ng-model="issent">
+                                    <input type="checkbox" id="checkbox3" ng-model="$parent.issent">
                                     <label for="checkbox3">Send login information to user</label>
                                 </div>
                             </div>
