--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -265,11 +265,18 @@
                                                          <td class="project-status" ng-if="ticket.status==ticketStatus.Reject.status">
                                                             <span class="label label-default label-nobg"></i> Rejected</span>
                                                         </td>
-                                                        <td class="project-actions">
+                                                        <td class="project-actions" ng-if="!isKeyAccount">
                                                             <a ng-if="isKeyAccount && ticket.status==ticketStatus.Done.status && ticket.open" ng-click="markAsBilled(ticket)" class="btn btn-white btn-sm mb5">bill</a>
                                                             <a ng-if="isKeyAccount && ticket.status==ticketStatus.Done.status && ticket.billed && !ticket.payed" ng-click="markAsPayed(ticket)" class="btn btn-white btn-sm mb5">pay</a>
                                                             <button type="button" class="btn btn-white btn-sm mb5" data-toggle="modal" data-target="#edit-ticket" ng-if="ticket.status==ticketStatus.Draft.status" ng-click="openCreateTicket(ticket)"><i class="fa fa-pencil"></i> </button>
                                                             <button type="button" class="btn btn-white btn-sm mb5 fxw-alert-archive-ticket" ng-if="ticket.status==ticketStatus.Goproduction.status || ticket.status==ticketStatus.Draft.status" ng-click="deleteTicket(ticket)"><i class="fa fa-trash" ></i> </button>
+                                                            <a ng-click="openStoriesView(ticket)" class="btn btn-white btn-sm mb5"><i class="fa fa-search"></i> details</a>
+                                                        </td>
+                                                        <td class="project-actions" ng-if="isKeyAccount">
+                                                            <a ng-if="ticket.status==ticketStatus.Done.status && ticket.open" ng-click="markAsBilled(ticket)" class="btn btn-white btn-sm mb5">bill</a>
+                                                            <a ng-if="ticket.status==ticketStatus.Done.status && ticket.billed && !ticket.payed" ng-click="markAsPayed(ticket)" class="btn btn-white btn-sm mb5">pay</a>
+                                                            <button type="button" class="btn btn-white btn-sm mb5" data-toggle="modal" data-target="#edit-ticket" ng-click="openCreateTicket(ticket)"><i class="fa fa-pencil"></i> </button>
+                                                            <button type="button" class="btn btn-white btn-sm mb5 fxw-alert-archive-ticket" ng-click="deleteTicket(ticket)"><i class="fa fa-trash" ></i> </button>
                                                             <a ng-click="openStoriesView(ticket)" class="btn btn-white btn-sm mb5"><i class="fa fa-search"></i> details</a>
                                                         </td>
                                                     </tr>
